Fix contrast with lighter background for main content

--- a/login/resources/css/styles.css
+++ b/login/resources/css/styles.css
@@ -18,7 +18,6 @@ body {
 }
 
 h1 {
-    color: white;
     font-weight: 900;
     font-size: 32px;
 }
@@ -33,7 +32,8 @@ main {
 
 #primary-content {
     backdrop-filter: blur(10px);
-    background-color: #b0b0b042;
+    background-color: #ffffffa3;
+    color: black;
     padding: 1rem;
     flex: 1;
     height: 100%;
@@ -54,6 +54,7 @@ input {
     box-sizing: border-box;
     border: 1px solid #ffffffb5;
     background-color: #ffffffb5;
+    border: 1px solid #626262b5;
 }
 .pf-v5-c-input-group  {
     display:flex;
